assets/css/style.scss
---
---

@import "{{ site.theme }}";

@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&family=Shadows+Into+Light+Two&display=swap');

a:link {
    color: #ea4aaa;
}

a:hover {
    color: #ec6cb9;
}

a:active {
    color: #f692ce;
}

a:visited {
    color: #ea4aaa;
}

body {
    color: #FFFFFF;
    background-color: #1c0141;
    font-family: 'Roboto', sans-serif;
}

h1 {
    color: #8a63d2;
    font-family: 'Shadows Into Light Two', cursive;
}

h2 {
    color: #b392f0;
    font-family: 'Shadows Into Light Two', cursive;
}

h3 {
    color: #d1bcf9;
    font-family: 'Shadows Into Light Two', cursive;
}

h4 {
    color: #e6dcfd;
    font-family: 'Shadows Into Light Two', cursive;
}

h5 { 
    color: #f5f0ff;
    font-family: 'Shadows Into Light Two', cursive;
}

h6 {
    color: #FFFFFF;
    font-family: 'Shadows Into Light Two', cursive;
}

